--- a/yougoushop-admin/pom.xml
+++ b/yougoushop-admin/pom.xml
@@ -17,6 +17,7 @@
     <description></description>
 
     <dependencies>
+        <!--hhhhhhhh-->
         <!--Spring begin-->
         <dependency>
             <groupId>com.yougou</groupId>
