--- a/yougoushop-ui/pom.xml
+++ b/yougoushop-ui/pom.xml
@@ -81,11 +81,10 @@
             <artifactId>kaptcha</artifactId>
             <version>2.3.2</version>
         </dependency>
-
-
-
-
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
 
 
     </dependencies>
